<resources>
    <string name="app_name">Folklore</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="summary">Summary</string>
    <string name="the_great">The great...</string>
    <string name="warnings">Warnings</string>
    <string name="it_happened">It happened...</string>
    <string name="event">Event</string>
    <string name="to_sum_up">To sum up...</string>
    <string name="cancel">Cancel</string>
    <string name="post">post</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="blog">BLOG</string>
    <string name="story">STORY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_an_account_already_log_in">HAVE AN ACCOUNT ALREADY! LOG IN :)</string>
    <string name="dont_have_an_account_create_one">DONT HAVE AN ACCOUNT? CREATE ONE.</string>
    <string name="continue_as_a_guest">CONTINUE AS A GUEST</string>
</resources>