<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_drawable"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logomodified" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/username_drawable"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="Email"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/username_drawable"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tvGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/continue_as_a_guest"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_drawable"
                android:text="@string/log_in"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/dont_have_an_account_create_one"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_marginTop="20dp"/>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>